# Python-ProfPlan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0b538c99f42a_create_subjects_table.py  23b9bd6af1f0_create_document_and_chunk_tables.py  344028c09025_reshape_chunks_to_reference_content_and_.py  38fbd6dafdab_create_academic_items_table.py  4b6ee551c961_add_role_to_users.py  662ee933f319_create_plans_table.py  67031a2aa077_resize_chunk_embedding_to_1024_for_bge_.py  93f9288bd6dd_create_auth_and_user_tables.py  97faf01d0464_create_academic_item_category_tables.py  a1c2e3f4b5d6_create_ai_provider_table.py  b2d4f6a8c0e1_create_plan_document_table.py  c3e5a7b9d1f2_create_icon_and_color_catalogs.py  d1e2f3a4b5c6_add_soft_delete_everywhere.py  d4e5f6a7b8c9_create_audit_logs_table.py  e5a1b2c3d4f0_add_ingestion_status_to_document.py  ea0cdc7d6f34_tune_auth_indexes.py  f1a2b3c4d5e6_create_plan_generation_and_item_status.py  f6dfa676d25f_create_modules_table.py
app/: main.py
app/api/: csrf.py  exceptions.py  middleware.py  rate_limit.py  router.py  security_headers.py
app/api/tests/: test_rate_limit.py  test_rate_limited_routes.py
app/core/: config.py  constants.py  security.py
app/infrastructure/celery/: worker.py
app/infrastructure/celery/tasks/: generate.py  ingest.py
app/infrastructure/database/: base.py  session.py
app/infrastructure/redis/: cache.py  client.py
app/infrastructure/storage/: minio.py
app/infrastructure/telemetry/: logging.py  traces.py
app/modules/academic_item_categories/application/: service.py
app/modules/academic_item_categories/domain/: exceptions.py
app/modules/academic_item_categories/infrastructure/: models.py  repository.py
app/modules/academic_item_categories/presentation/: dependencies.py  router.py  schemas.py
app/modules/academic_item_categories/tests/: test_service.py
app/modules/academic_items/application/: service.py
app/modules/academic_items/domain/: exceptions.py
app/modules/academic_items/infrastructure/: models.py  repository.py
app/modules/academic_items/presentation/: dependencies.py  router.py  schemas.py
app/modules/academic_items/tests/: test_service.py
app/modules/ai/application/: providers_service.py  service.py
app/modules/ai/domain/: exceptions.py  (+2 more)
app/shared/ai/: prompt_safety.py
app/shared/db/: soft_delete.py
app/shared/decorators/: retry.py
app/shared/exceptions/: base.py
app/shared/tests/: test_error_handling.py
docker/api/: Dockerfile  entrypoint.sh
docker/minio/: Dockerfile
docker/otel/: collector-config.yaml
docker/postgres/: Dockerfile  init.sql
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yml
docker/redis/: redis.conf
docker/tempo/: tempo.yml
docker/traefik/: dynamic.yml  traefik.yml
perf/: README.md  RESULTS.md  locustfile.py  run.sh
postman/: ProfPlan.local.postman_environment.json  ProfPlan.postman_collection.json
scripts/: coverage.sh  create_user.py  format.sh  lint.sh  test-integration.sh  test.sh
tests/integration/: conftest.py  test_academic_items_flow.py  test_ai_flow.py  test_auth_flow.py  test_categories_flow.py  test_generation_flow.py  test_modules_flow.py  test_plans_flow.py  test_rag_retrieval_flow.py  test_rag_search_flow.py  test_security_headers.py  test_soft_delete_cascade.py  test_subjects_flow.py  test_users_repository.py
(+120 files in other folders)
