[project]
name = "profplan"
version = "0.1.0"
description = "ProfPlan backend — AI/RAG-powered teaching plans platform"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.9.6",
]

[tool.ruff]
# Target the application source.
target-version = "py312"
line-length = 88
src = ["app", "tests"]
extend-exclude = [
    ".venv",
    "alembic/versions",
    "__pycache__",
]

[tool.ruff.lint]
# E/W   -> pycodestyle (PEP 8)
# F     -> pyflakes
# I     -> isort (import ordering)
# UP    -> pyupgrade
# B     -> flake8-bugbear
# C4    -> flake8-comprehensions
# SIM   -> flake8-simplify
# N     -> pep8-naming
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "N"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in package __init__ files.
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
