[project]
name = "profplan"
version = "0.1.0"
description = "ProfPlan backend — AI/RAG-powered teaching plans platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "redis>=5.2",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "email-validator>=2.2",
    "tenacity>=9.0",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "minio>=7.2",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "prometheus-client>=0.21",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
testpaths = ["app", "tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests that require real Postgres/Redis (run in the stack network)",
]

[tool.uv]
# This is an application, not a distributable package — do not build/install it.
package = false

[tool.ruff]
# Target the application source.
target-version = "py313"
line-length = 88
src = ["app", "tests"]
extend-exclude = [
    ".venv",
    "alembic/versions",
    "__pycache__",
]

[tool.ruff.lint]
# E/W   -> pycodestyle (PEP 8)
# F     -> pyflakes
# I     -> isort (import ordering)
# UP    -> pyupgrade
# B     -> flake8-bugbear
# C4    -> flake8-comprehensions
# SIM   -> flake8-simplify
# N     -> pep8-naming
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "N"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in package __init__ files.
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
